Fixes mobile tag styling spacing

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -243,12 +243,15 @@ iframe {
   display: inline-block;
   padding: 0;
   margin: 0;
+  font-size: 0;
 }
 .tag-list li a {
+  display: inline-block;
   border: 1px solid #ccc;
   border-radius: 4px;
   color: #777;
-  margin-right: 4px;
+  margin-right: 3px;
+  margin-bottom: 7px;
   font-size: $font-size--xsmall;
   padding: 4px 8px;
 }
